--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -8,7 +8,7 @@
     "---\n",
     "\n",
     "## Analysis\n",
-    "- The first broad, general observation we can see (from the pie charts) is that the split of male versus female mice included in the study is basically 50/50. This is a good sign that the study results could be generalized without any unknown gender or hormonal factors going unnoticed. \n",
+    "- The first broad, general observation we can see (from the pie charts) is that the split of male versus female mice included in the study is basically 50/50. This is a good sign that the study results could be generalized without any unknown sex or hormonal factors going unnoticed. \n",
     "- The second observation we can make from our data is that there is a strong positive relationship between mouse weight and the average tumor volume over time (0.84). \n",
     "- The third observation we can make is that, of the four drugs analyzed, Capomulin and Ramicane had the best results in reducing final tumor volume (as visualized in the box plot). It is important to note that these two drugs also had the most number of timepoints/mice tested, as shown in the bar graphs. While this might not skew the results in any way, It is still important to keep in mind. It might be worth repeating the study with the same number of mice in each treatment to ensure that there are no other factors making Capomulin  and Ramicane appear to be better options than other drugs, or making other drugs appear to perform worse than they actually do. "
    ]
